# dhcp-relay

./: .gitignore  .golangci.yaml  Dockerfile  Makefile  Makefile.common  Makefile.docker  README.md  addrs.go  config.go  debug.go  dhcpv4-reply.go  dhcpv4-request.go  dhcpv4.go  go.mod  go.sum  main.go  main_test.go  pyproject.toml  random.go  validate.go
.github/workflows/: docker.yml  e2e.yml  golang-build.yml  golang-lint.yml  golang-test.yml  golang-tidy.yml  python-lint.yml  vendor.yml
bytecode/: bpf.go  const.go
e2e/: bench.sh  compose.yaml  conftest.py  harness.py  kea-entrypoint.sh  lib.sh  nak-request.py  perf.sh  policy.sh  relay.sh  run.sh  scale.sh  test_bench.py  test_broadcast.py  test_chained.py  test_giaddr.py  test_linkmap.py  test_linkmap_reload.py  test_multihomed.py  test_nak.py  test_policy.py  test_policy_reload.py  test_relay.py  test_release.py  test_startup.py  test_twoserver.py  test_unnumbered.py  udhcpc-release.sh  udhcpc-run-release.sh  unnumbered.sh
gpckt/: layer.go
gpckt/dhcp/: flags.go  opt82.go  options.go  sub-options.go
pkg/bytecode/: bpf.go  const.go
pkg/cfgmatch/: cfgmatch.go  cfgmatch_test.go
pkg/debug/: debug.go  debug_test.go
pkg/dhcp4/: addrs.go  addrs_test.go  const.go  dhcp4.go  ifcache.go  ifcache_bench_test.go  ifcache_race_test.go  ifcache_test.go  leak_test.go  link_selection_test.go  random.go  reply.go  reply_forward_test.go  reply_test.go  request.go  request_test.go  validate.go
pkg/filewatch/: watch.go  (+1 more)
sockets/: misc.go  packet.go  raw.go
specs/: dhcpv4.go  ipv4.go  udp.go
version/: version.go
(+38 files in other folders)
